--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
     "description": "A Vite plugin for creating single-file MediaWiki userscript JavaScript files.",
     "version": "0.1.0",
     "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/marco-prontera/vite-plugin-css-injected-by-js.git"
+    },
+    "bugs": {
+        "url": "https://github.com/marco-prontera/vite-plugin-css-injected-by-js/issues"
+    },
+    "homepage": "https://github.com/marco-prontera/vite-plugin-css-injected-by-js#readme",
     "main": "dist/plugin.js",
     "types": "dist/plugin.d.ts",
+    "files": [ "dist", "LICENSE" ],
     "scripts": {
         "build": "tsc",
         "lint": "eslint . --fix --ignore-path .gitignore"
