--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-    "name": "vite-plugin-mediawiki-userscript",
-    "description": "A Vite plugin for creating single-file MediaWiki userscript JavaScript files.",
-    "version": "0.1.4",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:ChlodAlejandro/vite-plugin-mediawiki-userscript.git"
-    },
-    "bugs": {
-        "url": "https://github.com/ChlodAlejandro/vite-plugin-mediawiki-userscript/issues"
-    },
-    "homepage": "https://github.com/ChlodAlejandro/vite-plugin-mediawiki-userscript",
-    "main": "dist/plugin.js",
-    "types": "dist/plugin.d.ts",
-    "files": [
-        "dist",
-        "assets",
-        "LICENSE"
-    ],
-    "workspaces": [
-        "tests/projectA"
-    ],
-    "scripts": {
-        "dev": "nodemon -w src/ -w assets/ -e ts,js,mjs -x \"tsc && npm run -w tests/projectA dev\"",
-        "build": "tsc",
-        "lint": "eslint . --fix --ignore-path .gitignore"
-    },
-    "dependencies": {
-        "vite-plugin-css-injected-by-js": "^3.3.0"
-    },
-    "devDependencies": {
-        "@rushstack/eslint-patch": "^1.3.3",
-        "@tsconfig/node18": "^18.2.2",
-        "@types/node": "^18.18.5",
-        "@typescript-eslint/eslint-plugin": "^6.13.2",
-        "@typescript-eslint/parser": "^6.13.2",
-        "eslint": "^8.49.0",
-        "eslint-config-wikimedia": "^0.26.0",
-        "nodemon": "^3.0.2",
-        "types-mediawiki": "^1.4.0",
-        "typescript": "~5.2.0",
-        "vite": "^4.4.11"
-    }
+	"name": "vite-plugin-mediawiki-userscript",
+	"description": "A Vite plugin for creating single-file MediaWiki userscript JavaScript files.",
+	"version": "0.1.4",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git@github.com:ChlodAlejandro/vite-plugin-mediawiki-userscript.git"
+	},
+	"bugs": {
+		"url": "https://github.com/ChlodAlejandro/vite-plugin-mediawiki-userscript/issues"
+	},
+	"homepage": "https://github.com/ChlodAlejandro/vite-plugin-mediawiki-userscript",
+	"main": "dist/plugin.js",
+	"types": "dist/plugin.d.ts",
+	"files": [
+		"dist",
+		"assets",
+		"LICENSE"
+	],
+	"workspaces": [
+		"tests/projectA"
+	],
+	"scripts": {
+		"dev": "nodemon -w src/ -w assets/ -e ts,js,mjs -x \"tsc && npm run -w tests/projectA dev\"",
+		"build": "tsc",
+		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+	},
+	"dependencies": {
+		"magic-string": "^0.30.10",
+		"vite-plugin-css-injected-by-js": "^3.3.0"
+	},
+	"devDependencies": {
+		"@rushstack/eslint-patch": "^1.3.3",
+		"@tsconfig/node18": "^18.2.2",
+		"@types/node": "^18.18.5",
+		"@typescript-eslint/eslint-plugin": "^6.13.2",
+		"@typescript-eslint/parser": "^6.13.2",
+		"eslint": "^8.49.0",
+		"eslint-config-wikimedia": "^0.26.0",
+		"nodemon": "^3.0.2",
+		"types-mediawiki": "^1.4.0",
+		"typescript": "~5.2.0",
+		"vite": "^4.4.11"
+	}
 }
