--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 	},
 	"dependencies": {
 		"magic-string": "^0.30.10",
-		"vite-plugin-css-injected-by-js": "^3.3.0"
+		"vite-plugin-css-injected-by-js": "3.3.1"
 	},
 	"devDependencies": {
 		"@rushstack/eslint-patch": "^1.3.3",
