--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 	"scripts": {
 		"dev": "nodemon -w src/ -w assets/ -e ts,js,mjs -x \"tsc && npm run -w tests/projectA dev\"",
 		"build": "tsc",
-		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+		"clean": "rm -rf dist tsconfig.tsbuildinfo",
+		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+		"prepack": "npm run lint && npm run clean && npm run build"
 	},
 	"dependencies": {
 		"magic-string": "^0.30.10",
