ci: workflow cleanup
- Update actions
- Ensure proper job ordering

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,9 +12,9 @@ jobs:
             NODE_ENV: development
         steps:
             -   name: Checkout code
-                uses: actions/checkout@v3
+                uses: actions/checkout@v4
             -   name: Setup Node
-                uses: actions/setup-node@v3
+                uses: actions/setup-node@v4
                 with:
                     node-version: '20.x'
                     registry-url: 'https://registry.npmjs.org'
@@ -32,6 +32,7 @@ jobs:
 
     test:
         name: Test
+        needs: build
         # TODO: We don't have tests yet.
         if: ${{ false }}
         runs-on: ubuntu-latest
@@ -44,9 +45,9 @@ jobs:
             PUPPETEER_PRODUCT: ${{ matrix.product }}
         steps:
             -   name: Checkout code
-                uses: actions/checkout@v3
+                uses: actions/checkout@v4
             -   name: Setup Node
-                uses: actions/setup-node@v3
+                uses: actions/setup-node@v4
                 with:
                     node-version: '20.x'
                     registry-url: 'https://registry.npmjs.org'
@@ -62,15 +63,16 @@ jobs:
     deploy:
         name: Publish (npm)
         needs: build
+        # needs: test
         if: ${{ startsWith( github.ref, 'refs/tags/v' ) }}
         environment: npm
 
         runs-on: ubuntu-latest
         steps:
             -   name: Checkout code
-                uses: actions/checkout@v3
+                uses: actions/checkout@v4
             -   name: Setup Node
-                uses: actions/setup-node@v3
+                uses: actions/setup-node@v4
                 with:
                     node-version: '20.x'
                     registry-url: 'https://registry.npmjs.org'
