ci: fix artifact download path

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,6 +57,7 @@ jobs:
                 uses: actions/download-artifact@v4
                 with:
                     name: dist
+                    path: dist/
             -   name: Perform tests
                 run: npm test
 
@@ -82,6 +83,7 @@ jobs:
                 uses: actions/download-artifact@v4
                 with:
                     name: dist
+                    path: dist/
             -   name: Publish
                 run: npm publish
                 env:
