--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,8 +33,6 @@ jobs:
     test:
         name: Test
         needs: build
-        # TODO: We don't have tests yet.
-        if: ${{ false }}
         runs-on: ubuntu-latest
         strategy:
             fail-fast: true
@@ -53,12 +51,16 @@ jobs:
                     registry-url: 'https://registry.npmjs.org'
             -   name: Install dependencies
                 run: npm ci
+            -   name: Lint
+                run: npm run lint
             -   name: Download dist files
                 uses: actions/download-artifact@v4
                 with:
                     name: dist
                     path: dist/
             -   name: Perform tests
+                # TODO: We don't have tests yet.
+                if: ${{ false }}
                 run: npm test
 
     deploy:
